--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "illuminate/container": "^9.22",
         "illuminate/database": "^9.22",
         "firebase/php-jwt": "^6.3",
-        "ramsey/uuid": "^4.3"
+        "ramsey/uuid": "^4.3",
+        "vlucas/valitron": "^1.4"
     }
 }
